--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,3 +2,9 @@ eclipse.preferences.version=1
 encoding//WebContent/Index.jsp=UTF-8
 encoding//WebContent/test.jsp=UTF-8
 encoding//WebContent/views/usermange.jsp=UTF-8
+encoding//src/com/dao/UserDao.java=UTF-8
+encoding//src/com/dao/UserDaoImpl.java=UTF-8
+encoding//src/com/entity/User.java=UTF-8
+encoding//src/com/manager/UserManager.java=UTF-8
+encoding//src/com/manager/UserManagerImpl.java=UTF-8
+encoding//src/com/web/UserController.java=UTF-8
