--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -9,3 +9,4 @@ encoding//src/com/entity/User.java=UTF-8
 encoding//src/com/manager/UserManager.java=UTF-8
 encoding//src/com/manager/UserManagerImpl.java=UTF-8
 encoding//src/com/web/UserController.java=UTF-8
+encoding/<project>=UTF-8
