--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,110 +1,100 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
-  <display-name>CS580</display-name>
+  <display-name>TMS</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
+    <welcome-file>Index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-
-<!-- 加载所有的配置文件 -->
-
-<context-param>
+  <context-param>
     <param-name>contextConfigLocation</param-name>
     <param-value>classpath*:config/spring/spring-*.xml</param-value>
-</context-param>
-
-<!-- 配置Spring监听 -->
-<listener>
+  </context-param>
+  <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-</listener>
-
-<!-- 配置字符集 -->
-<filter>
+  </listener>
+  <filter>
     <filter-name>encodingFilter</filter-name>
     <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
     <init-param>
-        <param-name>encoding</param-name>
-        <param-value>UTF-8</param-value>
+      <param-name>encoding</param-name>
+      <param-value>UTF-8</param-value>
     </init-param>
     <init-param>
-        <param-name>forceEncoding</param-name>
-        <param-value>true</param-value>
+      <param-name>forceEncoding</param-name>
+      <param-value>true</param-value>
     </init-param>
-</filter>
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>encodingFilter</filter-name>
     <url-pattern>/</url-pattern>
-</filter-mapping>
-
-<!-- 配置Session -->
-<filter>
+  </filter-mapping>
+  <filter>
     <filter-name>openSession</filter-name>
     <filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
     <init-param>
-        <param-name>sessionFactoryBeanName</param-name>
-        <param-value>sessionFactory</param-value>
+      <param-name>sessionFactoryBeanName</param-name>
+      <param-value>sessionFactory</param-value>
     </init-param>
-</filter>
-<filter-mapping>
+  </filter>
+  <filter-mapping>
     <filter-name>openSession</filter-name>
     <url-pattern>/*</url-pattern>
-</filter-mapping>
-
-<!-- 配置SpringMVC -->
-<servlet>
+  </filter-mapping>
+  <servlet>
     <servlet-name>springMVC</servlet-name>
     <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
     <init-param>
-        <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:config/spring/spring-mvc.xml</param-value>
+      <param-name>contextConfigLocation</param-name>
+      <param-value>classpath*:config/spring/spring-mvc.xml</param-value>
     </init-param>
     <load-on-startup>1</load-on-startup>
-</servlet>
-
-<servlet-mapping>
+  </servlet>
+  <servlet-mapping>
     <servlet-name>springMVC</servlet-name>
     <url-pattern>/</url-pattern>
-</servlet-mapping>
-
-<!-- 引用js,如果无此配置，则无法对js进行加载 -->
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.png</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>default</servlet-name>
+    <url-pattern>*.jpg</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.js</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.css</url-pattern>
-</servlet-mapping>  
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.map</url-pattern>
-</servlet-mapping>  
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.eot</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.svg</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.ttf</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.woff</url-pattern>
-</servlet-mapping>
-<servlet-mapping>
+  </servlet-mapping>
+  <servlet-mapping>
     <servlet-name>default</servlet-name>
     <url-pattern>*.woff2</url-pattern>
-</servlet-mapping>
+  </servlet-mapping>
 </web-app>
